--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,26 @@
 .App {
   text-align: center;
 }
+form{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: 1px solid #dadce0;
+  border-radius: 8px;
+  width: 40%;
+  height: 150%;
+  padding: 24px 24px 36px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
 
+}
+button.log{
+  margin-top: 20px;
+  width: 10%;
+
+ 
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
