--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,7 +80,10 @@ nav.elements ul li {
 }
 nav.elements ul li a{
   text-decoration: none;
-  color: white;
+  color: crimson;
+  
+  border-radius: 2px;
+
   font-size: 20px;
   
 }
@@ -104,11 +107,12 @@ nav.elements{
    position: absolute;
    float: left;
    font-size: 26px;
-   color: white;
+   
    z-index: 5;
   width: 100vw;
   height: 50px;
   top: 0;
+  
   
   box-sizing: border-box;
 
@@ -327,7 +331,7 @@ div.bar{
 .slant4{
   position: absolute;
 width: 98vw;
-height: 195px;
+height: 95px;
 
 /* top: 647px; */
 bottom: 0px;
