--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,25 @@
 .App {
   text-align: center;
 }
-form{
-  display: flex;
+form.form{
+  
+  display: absolute;
   flex-direction: column;
   background-color: white;
   border: 1px solid #dadce0;
   border-radius: 8px;
   width: 40%;
   height: 150%;
-  padding: 24px 24px 36px;
+  margin-top: 155px;
+  padding: 20px;
+  /* padding: 24px 24px 36px; */
   margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-
+  margin-right: auto; 
 }
+  
+  /* margin-top: 100px;
+
+
 button.log{
   margin-top: 20px;
   width: 10%;
@@ -164,7 +169,8 @@ p.us{
   text-align: center;
   margin-left: 300px;
   margin-right: 300px;
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  padding-top: 90px;
   font-size: 20px;
 }
 div.image1{
@@ -190,8 +196,8 @@ div.image2{
   margin-top: -5px; */
   text-align: center;
   font-size: 14px;
-  margin-top: -150px;
-  margin-left: 480px;
+  margin-top: -100px;
+  margin-left: 550px;
   
 }
 div.image3{
@@ -205,7 +211,7 @@ div.image3{
   text-align: justify;
   font-size: 14px;
   float: right;
-  margin-top: -150px; 
+  margin-top: -100px; 
 }
 img.shirt1{
   height: 200px;
@@ -218,7 +224,7 @@ img.hoodie1{
 }
 div.slant{
   position: absolute;
-width: 99vw;
+width: 100vw;
 height: 360px;
 left: 0px;
 top: 0px;
