--- a/client/src/ProductCard.css
+++ b/client/src/ProductCard.css
@@ -1,11 +1,25 @@
 .card {
     border: 1px solid red;
     border-radius: 3% ;
-}
+    
 
+}
+.items{
+    padding: 50px;
+   
+    
+}
+.col{
+    border: 1px solid red;
+    padding: 5px;
+    align-items: center;
+}
 .card-body {
-    padding: 5%;
+    padding: 5px;
+    align-items: center;
     font-size: 20px;
+    border: 1px solid red;
+    
 }
 
 .card-title {
