--- a/client/src/App.css
+++ b/client/src/App.css
@@ -165,6 +165,10 @@ div.intro{
   font-size: 10px;
   
 }
+div.purchasesholder{
+  overflow-y: scroll;
+  height: 50vh;
+}
 p.us{
   text-align: center;
   margin-left: 300px;
@@ -270,6 +274,16 @@ padding: 50px;
 color: #FFFFFF;
 
 
+}
+.width{
+  width: 200px;
+}
+div.card{
+  margin-right: 50px;
+  padding: 20px;
+}
+.cardrow{
+  width:50px;
 }
 .slanth3{
   position: absolute;
