--- a/client/src/Products.css
+++ b/client/src/Products.css
@@ -1,12 +1,12 @@
 .container {
-    padding: 30px;
-    column-count: 3;
-    row-gap: 3px;
+    /* padding: 20px; */
+    column-count: 3
+    
+   
+   
 }
 .grid text-center{
     border: solid;
+    
 }
 
-.row {
-    grid-row-gap: 3px;
-}
