--- a/client/src/Products.css
+++ b/client/src/Products.css
@@ -23,14 +23,36 @@ margin-top: 0px;
 .look{
     margin-bottom: 0;
     margin-top: 70px;
-    padding-left: 96px;
-    font-size: 25px;
+  
+ 
 }
 .product-display{
+    margin-left: 100px;
+    display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  grid-gap: 1rem;
+  gap: 1rem;
+}
+div.row g-0{
     height: 400px;
     width: 70vw;
-    margin-left: 390px;
+   
     margin-bottom: 0;
+}
+img.card-img-top{
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+div.info{
+    height: 7rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 50px;
 }
 .product-item:hover {
     transform: scale(1.05);
