--- a/client/src/App.css
+++ b/client/src/App.css
@@ -173,13 +173,14 @@ div.intro{
 div.card{
   position: absolute;
   right: 0px;
-  top: 70px;
+  top: 150px;
   left: 55vw;
   width: 500px;
 }
 .checks{
   display: flex;
-  padding-left: 100px;
+  padding-left: 50px;
+  margin-bottom: 20px;
 }
 .checker{
  
